// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageView renders empty state when no chat selected 1`] = `
"╭────────────────────────────────────────────────╮
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│             Select a chat to start             │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯"
`;

exports[`MessageView renders empty state when focused 1`] = `
"╭────────────────────────────────────────────────╮
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│             Select a chat to start             │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯"
`;

exports[`MessageView renders messages when chat is selected 1`] = `
"╭────────────────────────────────────────────────╮
│ Chat with Alice                                │
│────────────────────────────────────────────────│
│ [10:30] Alice: Hello there!                    │
│ [10:31] You: Hi Alice!                         │
│ [10:32] Alice: How are you doing today?        │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯"
`;

exports[`MessageView renders with unfocused state and messages 1`] = `
"╭────────────────────────────────────────────────╮
│ Chat with Alice                                │
│────────────────────────────────────────────────│
│ [10:30] Alice: Hello there!                    │
│ [10:31] You: Hi Alice!                         │
│ [10:32] Alice: How are you doing today?        │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯"
`;

exports[`MessageView renders outgoing message with cyan sender name 1`] = `
"╭────────────────────────────────────────────────╮
│ Chat with Alice                                │
│────────────────────────────────────────────────│
│ [10:30] Alice: Hello there!                    │
│ [10:31] You: Hi Alice!                         │
│ [10:32] Alice: How are you doing today?        │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯"
`;
